fixed an issue where header overflowed the screen on narrower screens

--- a/store/src/App.css
+++ b/store/src/App.css
@@ -12,13 +12,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
   background-image: 
     url(./images/mountains.jpg);
   background-size: cover;
   background-position: center;
   min-height: 100vh;
-
   z-index: 0;
 }
 
@@ -53,11 +51,12 @@
   align-items: center;
   justify-content: space-between;
   padding-right: 5em;
+  width: 50%;
 }
 
 .right-container {
   padding: 1.5em 0;
- 
+  width: 50%;
 }
 
 .link-list {
@@ -102,7 +101,7 @@
 }
 
 .log-in-btn {
-  width: 15em;
+  width: 12em;
   color: rgb(63, 200, 63);
   cursor: pointer;
 }
@@ -112,7 +111,9 @@ a {
   color: white;
 }
 
-
+a#sign-in {
+  width: 8em;  
+}
 
 .nav-link {
   text-align: center;
